# good-alloc-junction-hackathon-2023

./: README.md  myfile.txt  pyproject.toml
dataset/: README.roboflow.txt  data.yaml
dataset/test/labels/: thereal9_png_jpg.rf.2ca46ac44f24ea20e8ce282fdf210bc3.txt
dataset/train/: labels.cache
dataset/train/labels/: 0-1090-_jpg.rf.48b3da60ba25ccd2741b03912c564085.txt  0-1167-_jpg.rf.53c9d160a829a363ddb30b6354328eea.txt  0-1204-_jpg.rf.b190bc1fb5e1b9477fc2e985ff41a223.txt  0-4-_png_jpg.rf.cd77bd2e5af2c9dccaaf65d022fe0f29.txt  0-5-_png_jpg.rf.19e7b79344785c3276be6bafcdf7a279.txt  0-516-_jpg.rf.1387456127328b29d613ba26b1a8e2c6.txt  0-537-_jpg.rf.392caead7a7bc0f5d0591517cda895b5.txt  0-66-_png_jpg.rf.8343015f7b5abd3f9ad26fa53009d25e.txt  0-746-_jpg.rf.e41c34ed48f4fbcb663d73b66b3a6ddc.txt  0-899-_jpg.rf.56516aef998a32d950459b7240df5acf.txt  0-908-_jpg.rf.a7dbb511646ee79dc6e58f6c70372953.txt  0-922-_jpg.rf.747ba06cc2a05439ef9ad6487a26050d.txt  0-923-_jpg.rf.4fd658e3206596e3bb696695c637911a.txt  1-103-_jpg.rf.fb9ea3b4edbda693d512f19a7573428d.txt  1-349-_jpg.rf.9648eb431a2fac2a0c1df23a83d44815.txt  1-395-_jpg.rf.595e47d8beb9bc800f19d6f33da9dcc0.txt  1-685-_jpg.rf.2b6a664aa084aa2d9dfb0f922e71c421.txt  1-74-_jpg.rf.2591c1e935c7a70d184f0e3967bdca40.txt  IMG_20220826_103412_jpg.rf.56fdca11555036a17e04ac35dde3fdea.txt  IMG_20220826_103412_jpg.rf.8f4c9d74e8fc9fc4c16e6e371b097081.txt  IMG_20220826_103414_jpg.rf.e26d0acdd83faa7448a4995f589149d3.txt  (+774 more)
dataset/valid/: labels.cache
src/main_module/: create_frames_dataset_from_videos_dataset.py  dummy.py  extract_frames_from_single_video.py  main.py  prodv1.py  yolo.py  yolo_custom.py
src/resources/models/: best.pt
src/utility_module/: file_helpers.py  run.py  video_helpers.py
(+211 files in other folders)
