[tool.poetry]
name = "good_alloc_junction_project"
version = "0.1.0"
description = ""
authors = ["Turu <turtogtokh.altangerel@prezi.com>"]
readme = "README.md"
packages = [
    { include = "main_module", from = "src" },
    { include = "utility_module", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
