[tool.poetry]
name = "good_alloc_junction_project"
version = "0.1.0"
description = ""
authors = ["Turu <keatonturkuush.ta.ta@gmail.com>"]
readme = "README.md"
packages = [
    { include = "main_module", from = "src" },
    { include = "utility_module", from = "src" },
]

[tool.poetry.scripts]
good_detect = "main_module.main:run"

[tool.poetry.dependencies]
python = ">=3.10,<3.12.0"
pandas = "^2.1.3"
black = "^23.11.0"
torch = { version = "^1.12.1", extras = ["cuda"] }
torchvision = "^0.13.0"
ultralytics = "^8.0.216"
supervision = "^0.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
